Cleanup Reworking, Fixes